name:                wrecker-example
version:             1.1.1.0
synopsis:            An example client for Wrecker
description:
 'wrecker' is a library and executable for creating HTTP benchmarks. It is designed for
 benchmarking a series of dependent requests.

 'wrecker' includes a wrapped version of the `wreq` Session API
 , mainly through 'Network.Wreq.Wrecker'.

 See <https://github.com/lorenzo/wrecker#readme> for more information.
homepage:            https://github.com/lorenzo/wrecker#readme
license:             BSD3
author:              Jonathan Fischoff
maintainer:          jose.zap@gmail.com
copyright:           2016 skedge.me
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable example-server
  hs-source-dirs:      .
  main-is:             Server.hs
  build-depends:       base
                     , wrecker >= 1.1
                     , scotty
                     , aeson-qq
                     , warp >= 3.2.4
                     , markdown-unlit
                     , aeson
                     , text
                     , immortal
                     , next-ref
                     , wai
                     , network
                     , transformers
  cpp-options: -D_SERVER_IS_MAIN_
  ghc-options: -O2 -Wall -fno-warn-unused-do-bind -threaded -pgmL markdown-unlit -rtsopts "-with-rtsopts=-N -I0 -qg"
  default-language:    Haskell2010

executable example-client
  hs-source-dirs:      .
  main-is:             Client.lhs
  build-depends:       base
                     , wrecker >= 1.1
                     , wreq
                     , markdown-unlit
                     , aeson
                     , bytestring
                     , text
                     , http-client
                     , connection
  cpp-options: -D_CLIENT_IS_MAIN_
  ghc-options: -O2 -Wall -fno-warn-unused-do-bind -threaded -pgmL markdown-unlit -rtsopts "-with-rtsopts=-N -I0 -qg"
  default-language:    Haskell2010

executable example
  hs-source-dirs:      .
  main-is:             Main.lhs
  build-depends:       base
                     , wrecker >= 1.1
                     , scotty
                     , aeson-qq
                     , warp >= 3.2.4
                     , wreq
                     , markdown-unlit
                     , aeson
                     , bytestring
                     , text
                     , http-client
                     , connection
                     , immortal
                     , next-ref
                     , wai
                     , network
                     , connection
                     , transformers
  ghc-options: -O2 -Wall -fno-warn-unused-do-bind -threaded -pgmL markdown-unlit  -rtsopts "-with-rtsopts=-N -I0 -qg"
  default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/lorenzo/wrecker
